Fix alignment of close menu icon

--- a/style.css
+++ b/style.css
@@ -43,6 +43,7 @@ h1, h2, h3, h4, header {
   display: grid;
   grid-template-columns: 1fr;
   background: var(--dark-primary-color);
+  position: fixed;
 }
 
 .header {
@@ -73,13 +74,28 @@ h1, h2, h3, h4, header {
 }
 
 .menu-main {
-  display: grid;
-  grid-template-columns: 250px;
+  /* display: grid; */
+  /* grid-template-columns: 250px; */
+  /* width: 300px; */
+  /* height: 100%; */
   margin-top: 6rem;
+  padding: 0;
+  left: 0;
+}
+
+.list {
+  margin: 0;
+  list-style: none;
   padding: 0;
 }
 
+.list-item {
+  margin: 0;
+  padding: 1rem;
+}
+
 .nav-link {
+  width: 100%;
   text-decoration: none;
   color: var(--overlay-text-color);
   /* border: 0.5px solid var(--overlay-text-color); */
@@ -104,12 +120,25 @@ h1, h2, h3, h4, header {
   left: 0;
   overflow-x: hidden;
   transition: ease-in 0.5s;
+  padding-top: 2rem;
+}
+
+#close-menu {
+  width: 250px;
+  color: var(--overlay-text-color);
+  font-size: 2rem;
+  text-align: right;
 }
 
 /*-----main-----*/
 .main {
-  margin-top: 6rem;
+  margin-left: 300px;
+  margin-right: -400px;
   padding: 1rem;
+}
+
+.main-section {
+  padding-top: 8rem;
 }
 
 /*-------footer------*/
@@ -138,11 +167,6 @@ h1, h2, h3, h4, header {
   font-weight: 500;
 }
 
-.footer a:hover, .footer button:hover{
-  border-bottom: 2px solid var(--light-text-color);
-  border-radius: 0%;
-}
-
 .section-footer-content {
   display: inline-grid;
   grid-template-columns: auto auto;
@@ -168,6 +192,7 @@ h1, h2, h3, h4, header {
   font-weight: bold;
   color: var(--text-primary-color);
   background: red;
+  border: 0;
   border-radius: 25px;
   text-transform: uppercase;
   box-shadow: 0 5px 8px 0 rgba(0, 0, 0, 0.2), 
@@ -210,7 +235,7 @@ h1, h2, h3, h4, header {
 
 
 /* RESPONSIVE DESIGN */
-@media only screen and (max-width: 768px) {
+@media only screen and (max-width: 800px) {
   /*-----navigation-----*/
   .doc-title {
     font-size: 1.75rem;
@@ -221,6 +246,11 @@ h1, h2, h3, h4, header {
   }
 
   #menu-icon--small {display: block;}
+
+  /*-----main-----*/
+  .main {
+    margin: 0 auto;
+  }
 
   /*-----footer-----*/
   .footer {
